--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,6 +1,7 @@
 excluded:
   - Carthage
   - Tests
+  - vendor
 disabled_rules: # rule identifiers to exclude from running
   - type_body_length
   - file_length
