--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: Install Jazz
+      - name: Install Jazz
         run: gem install jazzy
 
       - name: Generate documentation
