DTPOMERSER-1389 Update OS to runner mac-15, install swiftlinter and address lint issues

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: macos-12
-            xcode_version: 14.2
+          - os: macos-15
+            xcode_version: 16.2
             fastlane_task: unit_tests
 
     runs-on: ${{ matrix.os }}
@@ -46,6 +46,10 @@ jobs:
 
       - name: Run ${{ matrix.task_title }}
         run: fastlane ${{ matrix.fastlane_task }}
+
+      - name: Install Lint
+        run:
+          brew install swiftlint
 
       - name: Lint validation
         run:
