--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -2,25 +2,17 @@ name: CodeQL (Swift) - SAST
 
 on:
   pull_request:
+    branches:
+      - develop
   push:
+    branches:
+      - develop
   workflow_dispatch:
 
 jobs:
-  analyze:
-    name: Code Scanning - CodeQL
-    runs-on: ubuntu-latest
-    timeout-minutes: 25
-    permissions:
-      security-events: write
-      packages: read
-      actions: read
-      contents: read
-    strategy:
-      fail-fast: false
-    steps:
-      - uses: hyperwallet/public-security-workflows/codeql@main
-        with:
-          language: swift
-          build-mode: 'manual'
-          timeout-minutes: 25
-
+  code-scanning:
+    uses: hyperwallet/public-security-workflows/.github/workflows/codeql-swift.yml@feature/ios-update  
+    with:
+      build-scheme: Insights
+      # build-workspace: Insights.xcworkspace
+   
