--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -3,10 +3,10 @@ name: CodeQL (Swift) - SAST
 on:
   pull_request:
     branches:
-      - develop
+      - master
   push:
     branches:
-      - develop
+      - master
   workflow_dispatch:
 
 jobs:
